Fixes header spacing issue for IE9

--- a/docroot/sites/all/themes/ilr_theme/scss/IE9.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/IE9.scss
@@ -10,7 +10,6 @@
 
 body {
   header {
-    position: static !important;
     a.cornell {
       background: rgba(white, 0);
     }
